# mysql-mcp-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: config.rs  db.rs  lib.rs  main.rs  sanitizer.rs  server.rs
src/mcp/: tools.rs
tests/: sanitizer.rs
