[package]
name = "mysql-mcp"
version = "1.0.0"
repository = "https://github.com/matpb/mysql-mcp-rs"
readme = "README.md"
keywords = ["mcp", "mysql", "database", "read-only", "ai"]
categories = ["database", "command-line-utilities"]
edition = "2024"
license = "MIT"
authors = ["Mathieu-Philippe Bourgeois <bourgeois.mat@gmail.com>"]
description = "A lightweight Rust MCP server for read-only MySQL access with multi-database support"

[[bin]]
name = "mysql-mcp"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server"] }
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
